# DualCore

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
.github/workflows/: build.yml
Presets/: Acid 303.dcpreset  Clean Filter Sweep.dcpreset  Dirty FM.dcpreset  Dynamic Input.dcpreset  Hybrid Acid MS20.dcpreset  MS20 Screamer.dcpreset  Moog Ladder Bass.dcpreset  OTA Punch.dcpreset  Parallel Notch.dcpreset  Resonant Acid.dcpreset  Rhythmic Gate.dcpreset  Steiner Vowel.dcpreset  Synced Wobble.dcpreset  Tape Warmth.dcpreset
Source/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  DualCoreDSP.cpp  DualCoreDSP.h  FilterResponseDisplay.cpp  FilterResponseDisplay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: DSP.md  HOWTO.md
